# lp-foundations

./: .gitignore  README.md  pyproject.toml
.github/workflow/: ci.yaml
01_clean_code/: README.md  game.py  headlines.py  import_typing.py  reveal.py
02_linting/: README.md
03_ci/: README.md
04_git_strategies/: README.md
05_assessing_code_quality/: 1_project_structure.md  README.md
05_code_quality/: 1_project_structure.md  2_code_reviews.md  3_code_smells.md
05_code_reviews/: README.md
06_testing/: README.md  coverage.md  testing_dataframes.md
07_object_oriented_programming/: README.md
07_project_structure/: README.md
07_testing/: README.md  coverage.md  testing_dataframes.md
07_text_editors/: 1_setup.md  3_debugger.md  README.md
08_object_oriented_programming/: README.md
08_text_editors/: 2_productivity.md  3_debugger.md  README.md
09_design_patterns/: README.md
09_object_oriented_programming/: README.md
09_text_editors/: 1_setup.md
10_design_patterns/: README.md
11_packaging/: README.md
assignment_1/: README.md
assignment_2/: README.md
assignment_3/: README.md
assignments/: LICENSE.md  README.md  pyproject.toml
assignments/assignment_0/: README.md
assignments/assignment_1/: README.md
assignments/assignment_2/: README.md
assignments/assignment_3/: README.md
assignments/assignment_4/: README.md
assignments/assignment_5/: README.md
assignments/life_expectancy/: analysis.ipynb  cleaning.py
assignments/life_expectancy/tests/: __init__.py  conftest.py  test_cleaning.py  test_pyproject.py
(+10 files in other folders)
